Add more form control

--- a/SKOI Website Project/main.html
+++ b/SKOI Website Project/main.html
@@ -206,9 +206,101 @@
 					<h4 class="modal-title" id="myModalLabel">Register</h4>
 				</div>
 				<div class="modal-body">
+					<h2>Team</h2>
 					<div class="form-group label-floating">
-						<label class="control-label">With Floating Label</label>
+						<label class="control-label">ชื่อทีม</label>
+						<input type="text" class="form-control">
+					</div>
+					<div class="form-group label-floating">
+						<label class="control-label">โรงเรียน</label>
+						<input type="text" class="form-control">
+					</div>
+					<hr />
+					<h2>Member 1 (Leader)</h2>
+					<div class="form-group label-floating">
+						<label class="control-label">ชื่อ</label>
+						<input type="text" class="form-control">
+					</div>
+					<div class="form-group label-floating">
+						<label class="control-label">นามสกุล</label>
+						<input type="text" class="form-control">
+					</div>
+					<div class="form-group">
+						<label class="control-label" for="grade">ระดับชั้น</label>
+						<select class="form-control" id="grade">
+							<option>ม.1</option>
+							<option>ม.2</option>
+							<option>ม.3</option>
+							<option>ม.4</option>
+							<option>ม.5</option>
+							<option>ม.6</option>
+						</select>
+					</div>
+					<div class="form-group label-floating">
+						<label class="control-label">Email</label>
 						<input type="email" class="form-control">
+					</div>
+					<div class="form-group label-floating">
+						<label class="control-label">Password</label>
+						<input type="password" class="form-control">
+					</div>
+					<hr />
+					<h2>Member 2</h2>
+					<div class="form-group label-floating">
+						<label class="control-label">ชื่อ</label>
+						<input type="text" class="form-control">
+					</div>
+					<div class="form-group label-floating">
+						<label class="control-label">นามสกุล</label>
+						<input type="text" class="form-control">
+					</div>
+					<div class="form-group">
+						<label class="control-label" for="grade">ระดับชั้น</label>
+						<select class="form-control" id="grade">
+							<option>ม.1</option>
+							<option>ม.2</option>
+							<option>ม.3</option>
+							<option>ม.4</option>
+							<option>ม.5</option>
+							<option>ม.6</option>
+						</select>
+					</div>
+					<div class="form-group label-floating">
+						<label class="control-label">Email</label>
+						<input type="email" class="form-control">
+					</div>
+					<div class="form-group label-floating">
+						<label class="control-label">Password</label>
+						<input type="password" class="form-control">
+					</div>
+					<hr />
+					<h2>Member 3</h2>
+					<div class="form-group label-floating">
+						<label class="control-label">ชื่อ</label>
+						<input type="text" class="form-control">
+					</div>
+					<div class="form-group label-floating">
+						<label class="control-label">นามสกุล</label>
+						<input type="text" class="form-control">
+					</div>
+					<div class="form-group">
+						<label class="control-label" for="grade">ระดับชั้น</label>
+						<select class="form-control" id="grade">
+							<option>ม.1</option>
+							<option>ม.2</option>
+							<option>ม.3</option>
+							<option>ม.4</option>
+							<option>ม.5</option>
+							<option>ม.6</option>
+						</select>
+					</div>
+					<div class="form-group label-floating">
+						<label class="control-label">Email</label>
+						<input type="email" class="form-control">
+					</div>
+					<div class="form-group label-floating">
+						<label class="control-label">Password</label>
+						<input type="password" class="form-control">
 					</div>
 				</div>
 				<div class="modal-footer">
